--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -1,6 +1,8 @@
 $bg-color: red;
 .body {
-  width: 200px;
-  height: 150px;
-  color: $bg-color;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
