### #7 검색 결과 페이지 레이아웃 See: Github issue #7 --------------------------------------- ### 작업파일 * components/Combo/Combo.jsx * components/Popup/Poppup.scss * components/SearchResultItem/SearchResultItem.jsx/scss * containers/MainView/MainView.jsx/scss * containers/SearchPopup/SearchPopup.jsx/scss * containers/SearchResult/SearchResult.jsx/scss --------------------------------------- ### 작업내용 * images폴더 추가, 좋아요 icon/칵테일 썸네일사진 임시 추가 * SearchResultItem Component추가, Combo hight수정을 위해 props 추가, Popup z-index 추가 * MainView 정리 및 v-scroll 불가능 하도록 수정 * SearchPopup에 검색 누를 시 결과 나오도록 임시로 추가(버튼 클릭 할 시 나오고 다시 클릭 시 사라짐) -> saga작업 필요 * SearchResult라는 칵테일 검색 결과를 보여주는 container 생성(인자로 data만 넘김)

--- a/src/containers/SearchPopup/SearchPopup.scss
+++ b/src/containers/SearchPopup/SearchPopup.scss
@@ -3,27 +3,36 @@
   left: 0%;
   right: 0%;
   top: 0%;
-  bottom: 50%;
   margin: auto;
-  background: green;
+  background: white;
 
-  .combo {
-    width: 100px;
-  }
-
-  button.search {
-    width: 100px;
-    height: 150px;
+  .topcotainer {
+    margin-top: 10px;
+    display: flex;
     background: white;
-  }
+    height: 70px;
+    justify-content: center;
 
-  input.search {
-    width: 200px;
-    height: 50px;
-    background: white;
+    .combo {
+      width: 120px;
+    }
+    input.search {
+      width: 300px;
+      background: white;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+    button.search {
+      width: 70px;
+      background: white;
+    }
   }
 
   .recommend {
+    margin-top: 5px;
     background: white;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    padding-top: 3px;
   }
 }
