--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -1,8 +1,13 @@
 $bg-color: red;
+
+html,
+body {
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
 .body {
   margin: 0;
-  padding: 0;
-  position: relative;
-  width: 100%;
   height: 100%;
 }
