--- a/src/containers/Enrolment/Enrolment.scss
+++ b/src/containers/Enrolment/Enrolment.scss
@@ -24,8 +24,9 @@
       display: block;
       padding-bottom: 29px;
       float: left;
+      cursor: pointer;
 
-      .step {
+      >span {
         display: block;
         width: 149px;
         margin-top: 29px;
@@ -39,15 +40,14 @@
         letter-spacing: normal;
         text-align: center;
         color: #707070;
-  
-        span {
-          padding-top:29px;
-        }
       }
     }
 
     >span:first-child {
       margin-left: 84px;
+    }
+
+    .select-step {
       border-bottom: 3px solid #707070;
       box-sizing: border-box;
     }
@@ -256,12 +256,145 @@
       width: 33.3334%;
       height: 780px;
       float:right;
+
+      .step2-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        margin-left: 70px;
+
+        .shake {
+          width: 100%;
+          height: 80px;
+          border-radius: 20px;
+          font-family: NanumGothicOTF;
+          font-size: 20px;
+          font-weight: bold;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: 1.1;
+          letter-spacing: normal;
+          color: #707070;
+        }
+
+        .stuff-container {
+          width: 100%;
+          position: absolute;
+          bottom: 0;
+
+          .stuff-add {
+            display: block;
+            width: 100%;
+          }
+
+          .stuff-add::after {
+            display: block;
+            content: '';
+            width: 100px;
+            height: 100px;
+            margin: auto;
+            border: 1px solid #707070;
+            border-radius: 50px;
+          }
+
+          .stuff-item {
+            width: 100%;
+            border: 1px solid #707070;
+            border-radius: 10px;
+            margin-top: 20px;
+            padding: 20px 15px;
+
+            .stuff-item-color {
+              display: block;
+              width: 50px;
+              height: 50px;
+              float: left;
+              border: 1px solid #707070;
+              border-radius: 10px;
+              box-sizing: border-box;
+            }
+
+            .stuff-item-input-stuff {
+              width: 200px;
+              height: 50px;
+              float: left;
+              margin-left: 10px;
+              border-radius: 10px;
+            }
+
+            .stuff-item-input-volume {
+              width: 100px;
+              height: 50px;
+              float: left;
+              margin-left: 10px;
+              border-radius: 10px;
+            }
+
+            .stuff-item-ratio {
+              float: right;
+              font-family: NanumGothicOTF;
+              font-size: 20px;
+              font-weight: normal;
+              font-style: normal;
+              font-stretch: normal;
+              line-height: 50px;
+              letter-spacing: normal;
+              color: #707070;
+            }
+
+          }
+
+          .stuff-item::after {
+            display: block;
+            content: '';
+            clear: both;
+          }
+
+        }
+
+      }
     }
 
     .common-container-step3 {
-      width: 33.3334%;
+      position: absolute;
+      width: 66.6664%;
       height: 780px;
-      float:right;
+      right: 0;
+      z-index: 1;
+      background: #fff;
+
+      .thums-image {
+        display: block;
+        width: 100%;
+        height: 640px;
+        border: 1px solid #707070;
+        box-sizing: border-box;
+      }
+
+      .other-image {
+        margin-top: 34px;
+
+        .images-item {
+          display: block;
+          float: left;
+          width: 120px;
+          height: 120px;
+          margin-right: 12px;
+          border: 1px solid #707070;
+          box-sizing: border-box;
+        }
+
+        .images-item:last-child {
+          margin-right: 0;
+        }
+      }
+
+      .other-image::after {
+        display: block;
+        content: '';
+        clear: both;
+      }
+
     }
   }
 
