--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -1,13 +1,136 @@
-$bg-color: red;
+@import "../../static/colors.scss";
 
 html,
 body {
   margin: 0;
   width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
-.body {
+.mainview {
   margin: 0;
+  width: 100%;
   height: 100%;
+  background-color: $main-color;
+
+  .headerview {
+    width: 100%;
+    color: $logo-color;
+    font-size: $logo-size;
+    font-family: $logo-family;
+  }
+
+  .bodyview {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: $main-color;
+
+    .top {
+      width: 100%;
+      display: flex;
+
+      .image {
+        width: 87px;
+        height: 130px;
+        background-color: pink;
+        margin-left: 282.3px;
+      }
+      .contents {
+        margin-left: 25px;
+        .title {
+          width: 248px;
+          height: 64px;
+          color: $title-color;
+          font-size: $title-size;
+          font-family: $title-family;
+          margin-bottom: 2px;
+        }
+        .bottom {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          align-items: center;
+
+          .text {
+            color: $contents-color;
+            font-size: $contents-size;
+            font-family: $contents-family;
+          }
+          .button {
+            width: 37px;
+            height: 37px;
+            background-color: transparent;
+            border: solid 2px #83d1e6;
+            color: #83d1e6;
+            font-size: 23px;
+            margin-left: 28px;
+            outline-style: none;
+            cursor: pointer;
+          }
+          .button_text {
+            width: 131px;
+            height: 20px;
+            color: #83d1e6;
+            font-size: 20px;
+            font-family: Arita-dotum-Medium_TTF;
+            text-align: left;
+            margin-left: 10px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    .bottom {
+      margin-top: 42.8px;
+      .hashtag {
+        display: flex;
+        margin-left: 393px;
+
+        div {
+          color: $contents-color;
+          font-family: Arita-dotum-_TTF;
+          font-size: 35px;
+          height: 35px;
+          margin-left: 126px;
+
+          &:first-child {
+            margin-left: 0px;
+          }
+
+          &:focus {
+            color: $white;
+            outline: none;
+          }
+        }
+      }
+      .images {
+        margin-top: 37.2px;
+        margin-left: 393px;
+        height: 605px;
+        width: 1518px;
+        overflow: hidden;
+        white-space: nowrap;
+        overflow-x: auto;
+
+        .cocktail {
+          display: inline;
+          position: relative;
+          width: 360px;
+          height: 590px;
+          margin-right: 26px;
+          &:hover {
+            img {
+              opacity: 0.7;
+            }
+
+            div {
+              visibility: visible;
+            }
+          }
+        }
+      }
+    }
+  }
 }
