--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -2,12 +2,12 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  top: 0;
+  top: 80px;
   left: 0;
   right: 0;
   bottom: 0;
   margin: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #0f183580;
   z-index: 1;
   .innercontainer {
     position: absolute;
