--- a/src/containers/SearchPopup/SearchPopup.scss
+++ b/src/containers/SearchPopup/SearchPopup.scss
@@ -1,38 +1,85 @@
+@import "../../static/colors.scss";
+
 .searchform {
   position: absolute;
   left: 0%;
   right: 0%;
-  top: 0%;
   margin: auto;
-  background: white;
+  background-color: $main-color;
 
   .topcotainer {
-    margin-top: 10px;
     display: flex;
-    background: white;
-    height: 70px;
+    height: 145.3px;
     justify-content: center;
+    background-color: $main-color;
 
-    .combo {
-      width: 120px;
-    }
     input.search {
-      width: 300px;
-      background: white;
-      margin-left: 10px;
-      margin-right: 10px;
+      width: 1220.5px;
+      height: auto;
+      background-color: $main-color;
+      margin-left: 201.5px;
+      font-family: MyriadPro;
+      font-size: 35px;
+      color: #ffffff;
+      border: 0px;
+      outline: none;
     }
-    button.search {
-      width: 70px;
-      background: white;
+
+    .filter {
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+      width: 100px;
+    }
+    .type {
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: 70px;
+      width: 123px;
+      margin-right: 201px;
     }
   }
 
   .recommend {
-    margin-top: 5px;
-    background: white;
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
-    padding-top: 3px;
+    background-color: $main-color;
+    height: 119.5px;
+    color: #7a7a7a;
+    font-size: 35px;
+    display: flex;
+    width: auto;
+    margin-right: 200px;
+    margin-left: 201.5px;
+    overflow: hidden;
+
+    .text {
+      width: auto;
+      height: 48px;
+      margin-left: 25px;
+      padding: 12px 28px 12px 28px;
+      border-radius: 34px;
+      border: solid 2px #83d1e6;
+      text-align: center;
+      cursor: pointer;
+
+      &:first-child {
+        margin-left: 0px;
+      }
+      &:focus {
+        color: #83d1e6;
+        outline: none;
+      }
+    }
+    .next {
+      position: absolute;
+      height: 48px;
+      margin-top: 12px;
+      margin-right: 200px;
+      right: 0;
+      color: $white;
+      cursor: pointer;
+    }
   }
 }
