#16 레시피 보기 See: Github issue #16 --------------------------------------- ### 작업파일 * HTML_TEST 폴더 내의 파일 --------------------------------------- ### 작업내용 * 테스트 페이지로 레이아웃 영역 잡는중 * 깃허브에 이슈가 생성이 안되서 현재 16번 이슈로 예상하고 생성

--- a/src/containers/HTML_TEST/HTML_TEST.scss
+++ b/src/containers/HTML_TEST/HTML_TEST.scss
@@ -1,131 +1,152 @@
-$icon-color: red;
-
-.test {
-  height: 2000px;
-}
-
-.show {
-  display: block;
-}
-
-.close {
-  display: none;
-}
-
-.header-container-top {
-  position: fixed;
+.detail-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 80px;
-  border: 1px solid #707070;
-  box-sizing: border-box;
-}
 
-.header-container-top::after {
-  display: block;
-  content: '';
-  clear: both;
-}
+  .detail-content {
+    position: absolute;
+    width: 1520px;
+    height: 868px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    border: 1px solid #707070;
+    border-radius: 20px;
+  
+    .detail-content-header {
+      position: relative;
+      width: 100%;
+      height: 100px;
+      border-bottom: 1px solid #707070;
+      box-sizing: border-box;
+  
+      >span {
+        display: inline-block;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        margin-left: 43px;
+        font-family: NanumGothicOTF;
+        font-size: 40px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.1;
+        letter-spacing: normal;
+        color: #707070;
+      }
+  
+      .detail-content-header-info {
+        display: inline-block;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 70%;
+        font-family: NanumGothicOTF;
+        font-size: 15px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        letter-spacing: normal;
+        color: #707070;
+      }
+  
+    }
+  
+    .detail-content-main {
+      position: relative;
+      width: 100%;
+      height: 768px;
+  
+      .detail-content-main-view {
+        float: left;
+        position: relative;
+        width: 1040px;
+        height: 100%;
+  
+        .detail-content-main-view-cup {
+          position: absolute;
+          width: 478px;
+          height: 690px;
+          border: 1px solid #707070;
+          box-sizing: border-box;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%,-50%);
+        }
+  
+        .detail-content-main-view-image {
+          position: absolute;
+          width: 960px;
+          height: 710px;
+          border: 1px solid #707070;
+          box-sizing: border-box;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%,-50%);
+        }
+      }
+  
+      .detail-content-main-side {
+        float: right;
+        width: 480px;
+        height: 100%;
+        border-left: 1px solid #707070;
+        box-sizing: border-box;
 
-.icon {
-  width: 134px;
-  height: 40px;
-  margin: 20px 0 0 36px;
-  float: left;
-  background: $icon-color;
-}
+        .detail-content-main-side-toolbar {
+          width: 100%;
+          height: 60px;
+          border-bottom: 1px solid #707070;
+          box-sizing: border-box;
 
-.header-container-top Button {
-  float: right;
-}
+          >span::before {
+            content: '';
+            display: inline-block;
+            vertical-align: middle;
+            height: 100%;
+          }
 
-.header-container-top .search {
-  width: 60px;
-  height: 60px;
-  border-radius: 30px;
-  margin: 10px 15px 0 0;
-}
+          >span {
+            display: inline-block;
+            width: 25%;
+            height: 100%;
+            font-family: NanumGothicOTF;
+            font-size: 20px;
+            font-weight: bold;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.1;
+            letter-spacing: normal;
+            text-align: center;
+            color: #707070;
 
-.header-container-top .login {
-  width: 177px;
-  height: 60px;
-  border-radius: 15px;
-  margin: 10px 29px 0 0;
-}
+            text {
+              display: inline;
+              border-right: 1px solid #707070;
+              padding: 0 39px;
+            }
+          }
+        }
 
-.header-container-bottom {
-  position: fixed;
-  width: 100%;
-  margin-top: 30px;
-  padding: 0 29px 0 36px;
-  top: 80px;
-  left: 0;
-  box-sizing: border-box;
-}
+        .detail-content-main-side-info {
+          width: 100%;
+          height: 100%;
+          padding: 46px 0 0 41px;
+        }
 
-.header-container-bottom::after {
-  display: block;
-  position: fixed;
-  left:0;
-  content: '';
-  height: 100vh;
-  width: 100%;
-  background-color: #000;
-  opacity: 0.2;
-}
 
-.header-search-container {
-  height: 100%;
-  width: 100%;
-}
 
-.header-search-container-main {
-  height: 100%;
-}
+      }
+    }
 
-.header-search-input {
-  position: relative;
-  width: 100%;
-  padding: 10px 0;
-  border: 1px solid #707070;
-  border-left: 0;
-  border-right: 0;
-  box-sizing: border-box
-}
-
-#search-input {
-  width: 100%;
-  height: 40px;
-  font-size: 24px;
-  line-height: 24px;
-  border: none;
-  box-sizing: border-box;
-}
-
-.header-recommendation {
-  height: 100%;
-}
-
-.header-recommendation-list ul {
-  padding: 16px 40px;
-  margin: 0;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space:nowrap
-}
-
-.header-recommendation-list li {
-  display:inline-block;
-  height: 32px;
-  border: 1px solid #707070;
-  border-radius: 30px;
-  line-height: 32px;
-  text-align: center;
-  padding: 0 10px;
-  margin-left: 10px;
-  cursor: pointer;
-}
-
-.header-recommendation-list li:first-child {
-  margin-left: 0;
+    .detail-content-main::after {
+      display: block;
+      content: '';
+      clear: both;
+    }
+  
+  }
 }
