### #[issue number] issue text See: Github issue #[issue number] --------------------------------------- ### 작업파일 * action/userAction.js * api/rootAPI.js/userAPI.js * components/Div/Div.jsx * components/Edit/Edit.jsx * components/Popup/Popup.scss * components/SearchResultItem/SearchResultItem.jsx/scss * containers/LoginPopup/LoginPopup.jsx/scss * containers/MainView/MainView.jsx/scss * containers/SearchPopup/SearchPopup.jsx/scss * containers/SearchResult/SearchResult.jsx/scss * reducer/rootReducer.js * saga/rootSaga.js --------------------------------------- ### 작업내용 * userAction추가, userAPI추가(서버통신), Edit/Div에 id 추가, onInput->onKeyUp으로 event 수정(keycode문제) * 칵테일 검색 결과 아이템 수정 * 로그인, 회원가입 디자인 작업, 통신작업 * userReducer추가, rootReducer에 userReducer적용 * image, font 추가 * userSaga 추가, rootSaga에 userSaga적용

--- a/src/components/SearchResultItem/SearchResultItem.scss
+++ b/src/components/SearchResultItem/SearchResultItem.scss
@@ -13,12 +13,14 @@
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 15px;
+  background-color: rgba(8, 15, 36, 0.3);
   cursor: Default;
 
   .inner {
     position: absolute;
     width: 100%;
     bottom: 0px;
+    color: white;
 
     .cocktailName {
       font-family: SegoeUI;
@@ -54,10 +56,12 @@
         display: flex;
         margin-right: 20.3px;
         .like {
-          width: 25px;
-          height: 25px;
-          background-image: url("../../static/images/baseline-favorite_border-24px.svg");
+          width: 18px;
+          height: 100%;
+          background-image: url("../../static/images/Heart.svg");
           background-repeat: no-repeat;
+          background-position: center;
+          margin-right: 10.2px;
         }
         .number {
           height: 100%;
