--- a/src/containers/SearchResult/SearchResult.scss
+++ b/src/containers/SearchResult/SearchResult.scss
@@ -1,27 +1,39 @@
-.searchcontainer {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+.searchresultform {
+  background: #0f1835;
+  padding: 0;
+  height: 645px;
   overflow-y: auto;
-  background: white;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  padding-left: 220px;
+  padding-right: 201px;
 }
 
-.image_container {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 10px 10px 10px 10px;
+.resultitem {
+  width: 100%;
+  // max-width: 300px;
+  // min-width: 100px;
+  height: 100%;
+  // max-height: 300px;
+  // min-height: 100px;
 
-  &:hover {
-    img {
-      opacity: 0.7;
-    }
+  z-index: 50;
 
-    div {
-      visibility: visible;
+  .image_container {
+    position: relative;
+    width: inherit;
+    height: 300px;
+    //margin: 10px 10px 10px 10px;
+
+    &:hover {
+      img {
+        opacity: 0.7;
+      }
+
+      div {
+        visibility: visible;
+      }
     }
   }
 }
