#16 레시피 보기 See: Github issue #16 --------------------------------------- ### 작업파일 * enrolment / viewRecipe 등 여러 폴더 내 파일들 --------------------------------------- ### 작업내용 * 전체적인 구조 리펙토링 및 레이아웃 적용 중

--- a/src/containers/HTML_TEST/HTML_TEST.scss
+++ b/src/containers/HTML_TEST/HTML_TEST.scss
@@ -1,152 +1,326 @@
-.detail-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+// .detail-container {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   top: 0;
+//   left: 0;
 
-  .detail-content {
-    position: absolute;
-    width: 1520px;
-    height: 868px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    border: 1px solid #707070;
-    border-radius: 20px;
+//   .detail-content {
+//     position: absolute;
+//     width: 1520px;
+//     height: 868px;
+//     left: 50%;
+//     top: 50%;
+//     transform: translate(-50%,-50%);
+//     border: 1px solid #707070;
+//     border-radius: 20px;
   
-    .detail-content-header {
-      position: relative;
-      width: 100%;
-      height: 100px;
-      border-bottom: 1px solid #707070;
-      box-sizing: border-box;
+//     .detail-content-header {
+//       position: relative;
+//       width: 100%;
+//       height: 100px;
+//       border-bottom: 1px solid #707070;
+//       box-sizing: border-box;
   
-      >span {
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-        margin-left: 43px;
-        font-family: NanumGothicOTF;
-        font-size: 40px;
-        font-weight: bold;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 1.1;
-        letter-spacing: normal;
-        color: #707070;
-      }
+//       >span {
+//         display: inline-block;
+//         position: relative;
+//         top: 50%;
+//         transform: translateY(-50%);
+//         margin-left: 43px;
+//         font-family: NanumGothicOTF;
+//         font-size: 40px;
+//         font-weight: bold;
+//         font-style: normal;
+//         font-stretch: normal;
+//         line-height: 1.1;
+//         letter-spacing: normal;
+//         color: #707070;
+//       }
   
-      .detail-content-header-info {
-        display: inline-block;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-        left: 70%;
-        font-family: NanumGothicOTF;
-        font-size: 15px;
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        letter-spacing: normal;
-        color: #707070;
-      }
+//       .detail-content-header-info {
+//         display: inline-block;
+//         position: relative;
+//         top: 50%;
+//         transform: translateY(-50%);
+//         left: 70%;
+//         font-family: NanumGothicOTF;
+//         font-size: 15px;
+//         font-weight: normal;
+//         font-style: normal;
+//         font-stretch: normal;
+//         letter-spacing: normal;
+//         color: #707070;
+//       }
   
-    }
+//     }
   
-    .detail-content-main {
-      position: relative;
-      width: 100%;
-      height: 768px;
+//     .detail-content-main {
+//       position: relative;
+//       width: 100%;
+//       height: 768px;
   
-      .detail-content-main-view {
-        float: left;
-        position: relative;
-        width: 1040px;
-        height: 100%;
+//       .detail-content-main-view {
+//         float: left;
+//         position: relative;
+//         width: 1040px;
+//         height: 100%;
   
-        .detail-content-main-view-cup {
-          position: absolute;
-          width: 478px;
-          height: 690px;
-          border: 1px solid #707070;
-          box-sizing: border-box;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%,-50%);
-        }
+//         .detail-content-main-view-cup {
+//           position: absolute;
+//           width: 478px;
+//           height: 690px;
+//           border: 1px solid #707070;
+//           box-sizing: border-box;
+//           left: 50%;
+//           top: 50%;
+//           transform: translate(-50%,-50%);
+//         }
   
-        .detail-content-main-view-image {
-          position: absolute;
-          width: 960px;
-          height: 710px;
-          border: 1px solid #707070;
-          box-sizing: border-box;
-          left: 50%;
-          top: 50%;
-          transform: translate(-50%,-50%);
-        }
-      }
+//         .detail-content-main-view-image {
+//           position: absolute;
+//           width: 960px;
+//           height: 710px;
+//           border: 1px solid #707070;
+//           box-sizing: border-box;
+//           left: 50%;
+//           top: 50%;
+//           transform: translate(-50%,-50%);
+//         }
+//       }
   
-      .detail-content-main-side {
-        float: right;
-        width: 480px;
-        height: 100%;
-        border-left: 1px solid #707070;
-        box-sizing: border-box;
+//       .detail-content-main-side {
+//         float: right;
+//         width: 480px;
+//         height: 100%;
+//         border-left: 1px solid #707070;
+//         box-sizing: border-box;
 
-        .detail-content-main-side-toolbar {
-          width: 100%;
-          height: 60px;
-          border-bottom: 1px solid #707070;
-          box-sizing: border-box;
+//         .detail-content-main-side-toolbar {
+//           width: 100%;
+//           height: 60px;
+//           border-bottom: 1px solid #707070;
+//           box-sizing: border-box;
 
-          >span::before {
-            content: '';
-            display: inline-block;
-            vertical-align: middle;
-            height: 100%;
-          }
+//           >span::before {
+//             content: '';
+//             display: inline-block;
+//             vertical-align: middle;
+//             height: 100%;
+//           }
 
-          >span {
-            display: inline-block;
-            width: 25%;
-            height: 100%;
-            font-family: NanumGothicOTF;
-            font-size: 20px;
-            font-weight: bold;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: 1.1;
-            letter-spacing: normal;
-            text-align: center;
-            color: #707070;
+//           >span {
+//             display: inline-block;
+//             width: 25%;
+//             height: 100%;
+//             font-family: NanumGothicOTF;
+//             font-size: 20px;
+//             font-weight: bold;
+//             font-style: normal;
+//             font-stretch: normal;
+//             line-height: 1.1;
+//             letter-spacing: normal;
+//             text-align: center;
+//             color: #707070;
 
-            text {
-              display: inline;
-              border-right: 1px solid #707070;
-              padding: 0 39px;
-            }
-          }
-        }
+//             text {
+//               display: inline;
+//               border-right: 1px solid #707070;
+//               padding: 0 39px;
+//             }
+//           }
+//         }
 
-        .detail-content-main-side-info {
-          width: 100%;
-          height: 100%;
-          padding: 46px 0 0 41px;
-        }
+//         .detail-content-main-side-info {
+//           width: 438px;
+//           height: 662px;
+//           padding: 46px 0 0 41px;
 
+//           .side-info {
+//             display: block;
+//             margin-top: 50px;
+//             font-family: NanumGothicOTF;
+//             font-size: 15px;
+//             font-weight: bold;
+//             font-style: normal;
+//             font-stretch: normal;
+//             line-height: 1.13;
+//             letter-spacing: normal;
+//             color: #707070;
+//           }
 
+//           .side-info:nth-child(1) {
+//             margin-top: 0;
+//           }
 
-      }
-    }
+//           .side-info:nth-child(7) {
+//             margin-top: 42px;
+//           }
 
-    .detail-content-main::after {
-      display: block;
-      content: '';
-      clear: both;
-    }
+//           .content {
+//             font-weight: normal;
+//             margin-top: 21px;
+//           }
+
+//           .side-info-alcohol {
+//             list-style: none;
+//             padding: 0;
+//             margin: 0;
+
+//             li {
+//               display: block;
+//               float: left;
+//               width: 92px;
+//               height: 92px;
+//               border: 1px solid #707070;
+//               box-sizing: border-box;
+//               border-radius: 10px;
+//             }
+//           }
+
+//           .side-info-alcohol::after {
+//             display: block;
+//             content: '';
+//             clear: both;
+//           }
+
+//         }
+
+//       }
+//     }
+
+//     .detail-content-main-side-stuff {
+//       width: 480px;
+//       height: 662px;
+      
+//       .detail-content-main-side-stuff-container {
+//         position: absolute;
+//         bottom: 0;
+
+//         .detail-content-main-side-stuff-item {
+//           width: 430px;
+//           margin: 0 25px;
+//           padding: 22px 0 26px;
+//           border-top: 1px solid #707070;
   
-  }
-}
+//           span::before {
+//             content: '';
+//             display: inline-block;
+//             vertical-align: middle;
+//             height: 100%;
+//           }
+  
+//           span {
+//             font-family: NanumGothicOTF;
+//             font-size: 20px;
+//             font-weight: normal;
+//             font-style: normal;
+//             font-stretch: normal;
+//             line-height: 1.1;
+//             letter-spacing: normal;
+//             color: #707070;
+//           }
+  
+//           .stuff-color {
+//             display: inline-block;
+//             width: 35px;
+//             height: 35px;
+//             border: 1px solid #707070;
+//             border-radius: 5px;
+//             box-sizing: border-box;
+//             margin-left: 22px;
+//           }
+  
+//           .stuff-name {
+//             font-size: 20px;
+//             margin-left: 23px;
+//           }
+  
+//           .stuff-volume {
+//             font-size: 15px;
+//             margin-left: 71px;
+//           }
+  
+//           .stuff-ratio {
+//             font-size: 20px;
+//             margin-left: 83px;
+//           }
+//         }
+//       }
+
+//     }
+
+//     .detail-content-main-side-photo {
+//       padding: 45px;
+
+//       .photo-item {
+//         display: inline-block;
+//         width: 120px;
+//         height: 120px;
+//         margin: 0 10px 10px 0;
+//         border: 1px solid #707070;
+//         box-sizing: border-box;
+//       }
+
+//       .photo-item:nth-child(3n) {
+//         margin-right: 0;
+//       }
+//     }
+
+//     .detail-content-main-side-comment-container {
+//       height: 634px;
+
+//       .detail-content-main-side-comment-item {
+//         width: 430px;
+//         margin: 0 25px;
+//         padding: 22px 0 26px;
+//         border-bottom: 1px solid #707070;
+
+//         span::before {
+//           content: '';
+//           display: inline-block;
+//           vertical-align: middle;
+//           height: 100%;
+//         }
+
+//         span {
+//           font-family: NanumGothicOTF;
+//           font-weight: normal;
+//           font-style: normal;
+//           font-stretch: normal;
+//           line-height: 1.1;
+//           letter-spacing: normal;
+//           color: #707070;
+//         }
+
+//         .comment-name {
+//           font-size: 15px;
+//           margin-left: 16px;
+//         }
+
+//         .comment-content {
+//           font-size: 15px;
+//           margin-left: 20px;
+//         }
+
+//         .comment-time {
+//           font-size: 10px;
+//           margin-left: 20px;
+//         }
+//       }
+//     }
+
+//     .detail-content-main-side-comment-input {
+//       height: 74px;
+//       border-top: 1px solid #707070;
+//       box-sizing: border-box;
+//     }
+
+//     .detail-content-main::after {
+//       display: block;
+//       content: '';
+//       clear: both;
+//     }
+  
+//   }
+// }
