--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -12,6 +12,7 @@
 }
 html,
 body {
+  padding: 0;
   margin: 0;
   //width: 100%;
   height: 100%;
@@ -217,76 +218,67 @@ body {
     width: auto;
     height: 100%;
 
+    display: flex;
+
     .innercontainer {
+      // position: absolute;
       display: flex;
+      align-items: center;
       flex-wrap: nowrap;
       overflow: hidden;
-      //스크롤 안되게 할려면 여기 주석
-      overflow-x: auto;
-      -ms-overflow-style: none; // IE에서 스크롤바 감춤
-      &::-webkit-scrollbar {
-        display: none !important; // 윈도우 크롬 등
-      }
       width: 100%;
-      height: 100%;
+      height: auto;
       max-width: 1518px;
+      max-height: 590px;
 
-      .cocktail {
-        display: inline-block;
-        position: relative;
-        width: 360px;
-        max-height: 590px;
-        margin-right: 26px;
-        &:hover {
-          img {
-            opacity: 0.7;
-          }
+      .prevbspan {
+        position: absolute;
+        background-image: url("../../static/images/mainrightarrow.svg");
+        background-repeat: no-repeat;
+        -webkit-transform: rotate(180deg);
+        transform: rotate(180deg);
+        width: 116.3px;
+        height: 116.3px;
 
-          div {
-            visibility: visible;
-          }
-        }
+        cursor: pointer;
+        display: none;
+        z-index: 50;
+      }
+      .nextspan {
+        position: absolute;
+        right: 0;
+        background-image: url("../../static/images/mainrightarrow.svg");
+        background-repeat: no-repeat;
+        width: 116.3px;
+        height: 116.3px;
+        cursor: pointer;
+        display: none;
+        z-index: 50;
       }
 
-      .prevcontainer {
-        position: absolute;
-        width: 116.3px;
-        height: auto;
-        z-index: 1000;
-        margin-left: 21.7px;
-        .prevbspan {
-          position: absolute;
-          background-image: url("../../static/images/mainrightarrow.svg");
-          background-repeat: no-repeat;
-          -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-          width: 116.3px;
-          height: 116.3px;
-          z-index: 10020;
-
-          margin-top: 170%;
-          cursor: pointer;
-          display: none;
+      //cocktail result layout
+      .cocktailcontainer {
+        display: flex;
+        overflow: hidden;
+        overflow-x: auto;
+        -ms-overflow-style: none; // IE에서 스크롤바 감춤
+        &::-webkit-scrollbar {
+          display: none !important; // 윈도우 크롬 등
         }
-      }
 
-      .nextcontainer {
-        position: absolute;
-        width: 116.3px;
-        height: auto;
-        z-index: 1000;
-        right: 21.7px;
-        .nextspan {
-          z-index: 10020;
-          position: absolute;
-          background-image: url("../../static/images/mainrightarrow.svg");
-          background-repeat: no-repeat;
-          width: 116.3px;
-          height: 116.3px;
-
-          margin-top: 170%;
-          cursor: pointer;
-          display: none;
+        .cocktail {
+          display: inline-block;
+          position: relative;
+          width: 360px;
+          margin-right: 26px;
+          &:hover {
+            img {
+              opacity: 0.7;
+            }
+            div {
+              visibility: visible;
+            }
+          }
         }
       }
 
