--- a/src/components/SearchResultItem/SearchResultItem.scss
+++ b/src/components/SearchResultItem/SearchResultItem.scss
@@ -5,13 +5,13 @@
 }
 
 .information_rect {
+  visibility: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
   font-size: 15px;
-
   cursor: Default;
 
   .inner {
